--- a/src/template/user.html
+++ b/src/template/user.html
@@ -7,6 +7,15 @@
 {% block tabs %}
 
 <st:tab code="users" label="Users">
+    <st:form name="profile" url="/json/user">
+        <st:field id="email" type="text" property="email" label="Email" readonly="true"/>
+        <st:field id="display_name" type="text" property="display_name" label="Name" required="true"/>
+        <st:footer>
+            <st:action mode="view" label="Edit" action="edit"/>
+            <st:action mode="edit" label="Save" action="save"/>
+            <st:action mode="edit" label="Cancel" action="cancel"/>
+        </st:footer>
+    </st:form>
     <st:table name="users" url="/json/user">
         <st:header>
             <st:action label="New" action="new"/>
