--- a/src/grit/template/login.html
+++ b/src/grit/template/login.html
@@ -7,20 +7,21 @@
           <table>
               <tr>
                   <td><label for="userid">E-Mail:</label></td>
-                  <td><input type="text" name="userid"/></td>
+                  <td><input type="text" name="userid" id="userid"/></td>
               </tr>
               <tr>
                   <td><label for="password">Password:</label></td>
-                  <td><input type="password" name="password"/></td>
+                  <td><input type="password" name="password" id="password"/></td>
               </tr>
               <tr>
-                  <td colspan="2"><input type="checkbox" name="remember" value="X"/><label for="remember">&nbsp;Remember me</label></td>
+                  <td colspan="2"><label><input type="checkbox" name="remember" value="X" id="remember"/>&nbsp;Remember me</label></td>
               </tr>
               <tr colspan="2">
                   <td align="center"><input type="submit" value="Submit"></td>
               </tr>
           </table>
-          <a href="/">TRY AGAIN</a>
+          <a href="/signup">Sign me up</a> |
+          <a href="/resetpwd">I forgot my password</a>
       </form>
   </body>
 </html>
