--- a/src/template/base.html
+++ b/src/template/base.html
@@ -40,18 +40,19 @@
 				<a class="whitelink" href="{{ url['logout']|e }}">Logout</a>
 			{% else %}
 				<a class="whitelink" href="/">Home</a> |
-				<a class="whitelink" onclick="login();" href="#">Login</a> |				
-				<a class="whitelink" onclick="signup();" href="#">Sign up</a>
-            	<st:form name="login" url="/login" popup="true">
-                	<st:field id="userid" type="text" property="email" label="Email" required="true"/>
+				<a class="whitelink" onclick="st_show_form('login');" href="#">Login</a> |				
+				<a class="whitelink" onclick="st_show_form('signup');" href="#">Sign up</a>
+            	<st:form name="login" url="/login" submit="post" modal="true">
+                	<st:field id="userid" type="text" property="userid" label="Email" required="true"/>
                 	<st:field id="password" type="password" property="password" label="Password" required="true"/>
+                	<st:field id="remember_me" type="checkbox" property="remember_me" label="Remember me?"/>
 	                <st:footer>
-	                    <st:action mode="new" label="Log in" action="save"/>
+	                    <st:action mode="new" label="Log in" action="save" redirect="/"/>
 	                    <st:action mode="new" label="I forgot my password" action="save"/>
 	                    <st:action mode="new" label="Cancel" action="cancel"/>
 	                </st:footer>
             	</st:form>			
-            	<st:form name="signup" url="/signup" popup="true">
+            	<st:form name="signup" url="/signup" submit="post" popup="true">
                 	<st:field id="userid" type="text" property="email" label="Email" required="true"/>
                 	<st:field id="password" type="password" property="password" label="Password" required="true" confirm="true"/>
 	                <st:footer>
@@ -63,26 +64,34 @@
 		    </div>
 		{% endblock topbar %}
     </div>
-	<div id="sidebar" class="sidebar">
-		{% block sidebar %}
-		{% endblock sidebar %}
-	</div>
-    <div class="mainpage" id="mainpage">
-        {% block pagecontent %}
-            <div class="tabbox" id="tabbox">
-            </div>
-            <div class="pagebox" id="pagebox" width="100%">
-                <div id="page_pleasewait" class="tabpage">
-                    <span style="text-align: center;"><img src="/image/throbber.gif" height="32" width="32"/>&#160;Please wait</span>
-                </div>
-                <st:tabs>
-                    {% block tabs %}
-                    {% endblock tabs %}
-                </st:tabs>
-                {% block mainpage %}
-                {% endblock mainpage %}
-            </div>
-        {% endblock pagecontent %}
+    <div id="document" class="document">
+		<div id="documentwrapper" class="documentwrapper">
+			<div id="mainpagewrapper" class="mainpagewrapper">
+			    <div class="mainpage" id="mainpage">
+			        {% block pagecontent %}
+			            <div class="tabbox" id="tabbox">
+			            </div>
+			            <div class="pagebox" id="pagebox" width="100%">
+			                <div id="page_pleasewait" class="tabpage">
+			                    <span style="text-align: center;"><img src="/image/throbber.gif" height="32" width="32"/>&#160;Please wait</span>
+			                </div>
+			                <st:tabs>
+			                    {% block tabs %}
+			                    {% endblock tabs %}
+			                </st:tabs>
+			                {% block mainpage %}
+			                {% endblock mainpage %}
+			            </div>
+			        {% endblock pagecontent %}
+			    </div>
+			</div>
+		</div>
+ 		<div id="sidebarwrapper" class="sidebarwrapper">
+			<div id="sidebar" class="sidebar">
+				{% block sidebar %}
+				{% endblock sidebar %}
+			</div>
+		</div>
     </div>
   </body>
 </html>
