--- a/src/template/index.html
+++ b/src/template/index.html
@@ -1,8 +1,23 @@
 {% extends "base.html" %}
 
-{% block mainpage %}
-    <h1>Index</h1>
-    <p class="important">
-      Welcome on my awesome homepage
-    </p>
-{% endblock %}
+{% block sidebar %}
+<ul>
+	<li><a href="http://www.slowtwitch.com">Slowtwitch</a></li>
+	<li><a href="http://www.volkskrant.nl">De Volkskrant</a></li>
+	<li><a href="http://www.theglobeandmail.com">The Globe and Mail</a></li>
+</ul>
+{% endblock sidebar %}
+
+{% block tabs %}
+
+<st:tab code="cat" label="Ceiling Cat">
+   	<h1>Ceiling Cat watches you Code</h1>
+   	<img src="/favicon.ico"/>
+</st:tab>
+<st:tab code="hate" label="Haters gonna Hate">
+   	<h1>Haters gonna Hate</h1>
+   	<img src="http://i3.kym-cdn.com/entries/icons/square/000/001/945/5008_9c00_420.gif"/>
+</st:tab>
+
+{% endblock tabs %}
+
