--- a/src/template/index.html
+++ b/src/template/index.html
@@ -2,9 +2,9 @@
 
 {% block sidebar %}
 <ul>
-	<li><a href="http://www.slowtwitch.com">Slowtwitch</a></li>
-	<li><a href="http://www.volkskrant.nl">De Volkskrant</a></li>
-	<li><a href="http://www.theglobeandmail.com">The Globe and Mail</a></li>
+	<li><a class="whitelink" href="http://www.slowtwitch.com">Slowtwitch</a></li>
+	<li><a class="whitelink" href="http://www.volkskrant.nl">De Volkskrant</a></li>
+	<li><a class="whitelink" href="http://www.theglobeandmail.com">The Globe and Mail</a></li>
 </ul>
 {% endblock sidebar %}
 
