--- a/src/template/base.html
+++ b/src/template/base.html
@@ -52,7 +52,7 @@
                             <st:action mode="new" label="Cancel" action="cancel"/>
                         </st:footer>
                     </st:form>			
-                    <st:form name="signup" url="/signup" submit="post" popup="true">
+                    <st:form name="signup" url="/signup" submit="post" modal="true">
                         <st:field id="userid" type="text" property="email" label="Email" required="true"/>
                         <st:field id="password" type="password" property="password" label="Password" required="true" confirm="true"/>
                         <st:footer>
