--- a/src/template/login.html
+++ b/src/template/login.html
@@ -3,7 +3,7 @@
 {% block tabs %}
 
 <st:tab code="login" label="Login">
-	<st:form name="login" url="/login" submit="post" onerror="login_error" mode="new">
+	<st:form name="login" type="form" method="post" action="/login" onerror="login_error" mode="new">
 	    <st:field id="userid" type="text" property="userid" label="Email" required="true"/>
 	    <st:field id="password" type="password" property="password" label="Password" required="true"/>
 	    <st:field id="remember_me" type="checkbox" property="remember_me" label="Remember me?"/>
