--- a/src/template/signup.html
+++ b/src/template/signup.html
@@ -3,6 +3,7 @@
 {% block tabs %}
 
 <st:tab code="signup" label="Sign up">
+  {{ errorlist() }}
   <st:form name="login" type="form" method="post" action="/signup" onerror="login_error" mode="new">
     <st:field id="userid" type="text" property="userid" label="Email" required="true"/>
     <st:field id="password" type="password" property="password" label="Password" required="true" confirm="true"/>
