--- a/src/template/base.html
+++ b/src/template/base.html
@@ -48,89 +48,90 @@
   </head>
     <body onload="$$.run();">
         <div id="topbar" class="topbar">
-        	<div class="tools">
+            <div class="tools">
             	{% block topbar %}
-		        {% if user %}
-	                    {{ user.display_name|d(user.email) }} |
-	                    <a class="whitelink" href="/">Home</a> |
-	                    <a class="whitelink" href="{{urls['user']['logout'].url()|e}}">{{urls['user']['logout'].label()}}</a>
-	            	{% else %}
-	                    <a class="whitelink" href="/">Home</a> |
-	                    <a class="whitelink" onclick="st_show_form('login');" href="#">Login</a> |				
-	                    <a class="whitelink" onclick="st_show_form('signup');" href="#">Sign up</a>
-	                    <st:form name="login" url="/login" submit="post" modal="true" onerror="login_error">
-	                        <st:field id="userid" type="text" property="userid" label="Email" required="true"/>
-	                        <st:field id="password" type="password" property="password" label="Password" required="true"/>
-	                        <st:field id="remember_me" type="checkbox" property="remember_me" label="Remember me?"/>
-	                        <st:footer>
-	                            <st:action mode="new" label="Log in" action="save" redirect="/"/>
-	                            <st:action mode="new" label="I forgot my password" action="save"/>
-	                            <st:action mode="new" label="Cancel" action="cancel"/>
-	                        </st:footer>
-	                    </st:form>			
-	                    <st:form name="signup" url="/signup" submit="post" modal="true">
-	                        <st:field id="userid" type="text" property="email" label="Email" required="true"/>
-	                        <st:field id="password" type="password" property="password" label="Password" required="true" confirm="true"/>
-	                        <st:footer>
-	                            <st:action mode="new" label="Sign up" action="save"/>
-	                            <st:action mode="new" label="Cancel" action="cancel"/>
-	                        </st:footer>
-	                    </st:form>			
-		        	{% endif %}
-        		{% endblock topbar %}
+                    {% if user %}
+                        {{ user.display_name|d(user.email) }} |
+                        <a class="whitelink" href="/">Home</a> |
+                        <a class="whitelink" href="{{urls['user']['logout'].url()|e}}">{{urls['user']['logout'].label()}}</a>
+                    {% else %}
+                        <a class="whitelink" href="/">Home</a> |
+                        <a class="whitelink" onclick="st_show_form('login');" href="#">Login</a> |				
+                        <a class="whitelink" onclick="st_show_form('signup');" href="#">Sign up</a>
+                        <st:form name="login" url="/login" submit="post" modal="true" onerror="login_error">
+                            <st:field id="userid" type="text" property="userid" label="Email" required="true"/>
+                            <st:field id="password" type="password" property="password" label="Password" required="true"/>
+                            <st:field id="remember_me" type="checkbox" property="remember_me" label="Remember me?"/>
+                            <st:footer>
+                                <st:action mode="new" label="Log in" action="save" redirect="/"/>
+                                <st:action mode="new" label="I forgot my password" action="save"/>
+                                <st:action mode="new" label="Cancel" action="cancel"/>
+                            </st:footer>
+                        </st:form>			
+                        <st:form name="signup" url="/um/signup" modal="true">
+                            <st:field id="userid" type="text" property="userid
+                                      " label="Email" required="true"/>
+                            <st:field id="password" type="password" property="password" label="Password" required="true" confirm="true"/>
+                            <st:footer>
+                                <st:action mode="new" label="Sign up" action="save"/>
+                                <st:action mode="new" label="Cancel" action="cancel"/>
+                            </st:footer>
+                        </st:form>			
+                    {% endif %}
+                {% endblock topbar %}
             </div>
     	</div>
     <div id="document" class="document">
-		<div id="documentwrapper" class="documentwrapper">
-			<div id="mainpagewrapper" class="mainpagewrapper">
-			    <div class="mainpage" id="mainpage">
-			        {% block pagecontent %}
-			            <div class="tabbox" id="tabbox">
-			            </div>
-			            <div class="pagebox" id="pagebox" width="100%">
-			                <div id="page_pleasewait" class="tabpage">
-			                    <span style="text-align: center;"><img src="/image/throbber.gif" height="32" width="32"/>&#160;Please wait</span>
-			                </div>
-			                <st:tabs id="tabs element">
-			                    {% block tabs %}
-			                    {% endblock tabs %}
-			                </st:tabs>
-			                {% block mainpage %}
-			                {% endblock mainpage %}
-			            </div>
-			        {% endblock pagecontent %}
-			    </div>
-			</div>
-		</div>
- 		<div id="sidebarwrapper" class="sidebarwrapper">
-			<div id="sidebar" class="sidebar">
-				{% block sidebar %}
-					URLs: {{ urls|e }}
-					<p/>
-					{% for u in urls.urls() %}
-						{% if loop.first %}
-							<ul>
-						{% endif %}
-                   		<li><a class="whitelink" href="{{u.url()|e}}">{{u.label()}}</a></li>
-						{% if loop.last %}
-							</ul>
-						{% endif %}
-					{% endfor %}
-					{% for c in urls.collections() %}
-						{% for u in c.urls() %}
-							{% if loop.first %}
-								{{c.label()}}
-								<ul>
-							{% endif %}
-                    		<li><a class="whitelink" href="{{u.url()|e}}">{{u.label()}}</a></li>
-							{% if loop.last %}
-								</ul>
-							{% endif %}
-						{% endfor %}
-					{% endfor %}						
-				{% endblock sidebar %}
-			</div>
-		</div>
+        <div id="documentwrapper" class="documentwrapper">
+            <div id="mainpagewrapper" class="mainpagewrapper">
+                <div class="mainpage" id="mainpage">
+                    {% block pagecontent %}
+                        <div class="tabbox" id="tabbox">
+                        </div>
+                        <div class="pagebox" id="pagebox" width="100%">
+                            <div id="page_pleasewait" class="tabpage">
+                                <span style="text-align: center;"><img src="/image/throbber.gif" height="32" width="32"/>&#160;Please wait</span>
+                            </div>
+                            <st:tabs id="tabs element">
+                                {% block tabs %}
+                                {% endblock tabs %}
+                            </st:tabs>
+                            {% block mainpage %}
+                            {% endblock mainpage %}
+                        </div>
+                    {% endblock pagecontent %}
+                </div>
+            </div>
+        </div>
+        <div id="sidebarwrapper" class="sidebarwrapper">
+            <div id="sidebar" class="sidebar">
+                {% block sidebar %}
+                    URLs: {{ urls|e }}
+                    <p/>
+                    {% for u in urls.urls() %}
+                        {% if loop.first %}
+                            <ul>
+                        {% endif %}
+                        <li><a class="whitelink" href="{{u.url()|e}}">{{u.label()}}</a></li>
+                        {% if loop.last %}
+                            </ul>
+                        {% endif %}
+                    {% endfor %}
+                    {% for c in urls.collections() %}
+                        {% for u in c.urls() %}
+                            {% if loop.first %}
+                                {{c.label()}}
+                                <ul>
+                            {% endif %}
+                            <li><a class="whitelink" href="{{u.url()|e}}">{{u.label()}}</a></li>
+                            {% if loop.last %}
+                                </ul>
+                            {% endif %}
+                        {% endfor %}
+                    {% endfor %}						
+                {% endblock sidebar %}
+            </div>
+        </div>
     </div>
   </body>
 </html>
