Making signup work

--- a/src/template/base.html
+++ b/src/template/base.html
@@ -69,8 +69,7 @@
                             </st:footer>
                         </st:form>			
                         <st:form name="signup" url="/um/signup" modal="true">
-                            <st:field id="userid" type="text" property="userid
-                                      " label="Email" required="true"/>
+                            <st:field id="userid" type="text" property="userid" label="Email" required="true"/>
                             <st:field id="password" type="password" property="password" label="Password" required="true" confirm="true"/>
                             <st:footer>
                                 <st:action mode="new" label="Sign up" action="save"/>
