--- a/src/template/grit/usermgmt/passwordreset/startup.html
+++ b/src/template/grit/usermgmt/passwordreset/startup.html
@@ -11,6 +11,7 @@
           <st:field id="userid" type="text" property="userid" label="Email" required="true"/>
           <st:footer>
               <st:action mode="new" label="Reset Password" action="save"/>
+              <st:action mode="new" label="Cancel" action="link" href="/"/>
           </st:footer>
         </st:form>
     {% endif %}
