--- a/src/css/grizzle.css
+++ b/src/css/grizzle.css
@@ -16,6 +16,121 @@ body {
     padding: 0 0 0 0;
 }
 
+/*
+  Menu styling. 
+  See http://line25.com/tutorials/how-to-create-a-pure-css-dropdown-menu
+*/
+
+.topbar {
+    margin: 0 0 0 0;
+    width: 100%;
+    height: 50px;
+    background-color: #A30000;
+}
+
+.tools {
+    position: absolute;
+    top: /*1*/0px;
+    right: 1em;
+    color: white;
+}
+
+nav ul ul {
+    display: none;
+}
+
+nav ul li:hover > ul {
+    display: block;
+}
+
+nav ul {
+    background: #A30000; 
+    background: linear-gradient(top, #a30000 0%, #ff0000 100%);  
+    background: -moz-linear-gradient(top, #a30000 0%, #ff0000 100%); 
+    background: -webkit-linear-gradient(top, #a30000 0%, #ff0000 100%); 
+    box-shadow: 0px 0px 9px rgba(0,0,0,0.15);
+    padding: 0 /*20px*/;
+    border-radius: 10px;  
+    list-style: none;
+    position: relative;
+    display: inline-table;
+}
+
+nav ul:after {
+    content: ""; 
+    clear: both; 
+    display: block;
+}
+
+nav ul li {
+    float: left;
+}
+
+nav ul li:hover {
+    background: #4b545f;
+    background: linear-gradient(top, #4f5964 0%, #5f6975 40%);
+    background: -moz-linear-gradient(top, #4f5964 0%, #5f6975 40%);
+    background: -webkit-linear-gradient(top, #4f5964 0%,#5f6975 40%);
+    border-radius: 10px;  
+}
+
+nav ul li:hover .navitem:first-child {
+    border-radius: 10px 0 0 10px;
+}
+
+nav ul li:hover .navitem:last-child {
+    border-radius: 0 10px 10px 0;
+}
+
+nav ul li:hover .navitem {
+    color: white;
+}
+	
+nav ul li .navitem {
+    display: block;
+    padding: 5px 5px;
+    border-radius: 10px;  
+    color: white;
+    text-decoration: none;
+}
+
+nav ul li .navitem:first-child {
+    border-radius: 10px 0 0 10px;
+}
+
+nav ul li .navitem:last-child {
+    border-radius: 0 10px 10px 0;
+}
+
+nav ul ul {
+    background: #5f6975; 
+    border-radius: 0px; 
+    padding: 0;
+    position: absolute; top: 100%;
+}
+
+nav ul ul li {
+    float: none; 
+    border-top: 1px solid #6b727c;
+    border-bottom: 1px solid #575f6a;
+    position: relative;
+}
+
+nav ul ul li .navitem {
+    padding: 15px 40px;
+    color: #fff;
+}	
+
+nav ul ul li .navitem:hover {
+    background: #4b545f;
+}
+
+nav ul ul ul {  
+    position: absolute; left: 100%; top:0;
+}
+
+/* Menu done */
+
 tr.tableheader {
     background-color: #A30000;
 }
@@ -106,13 +221,6 @@ div.menubar {
     margin-bottom: 5px;
 }
 
-.topbar {
-    margin: 0 0 0 0;
-    width: 100%;
-    height: 50px;
-    background-color: #A30000;
-}
-
 .sidebarwrapper {
     float: left;
     width: 230px;
@@ -143,13 +251,6 @@ div.menubar {
     float: left;
     width: 98%;
     padding: 5px;
-}
-
-.tools {
-    position: absolute;
-    top: 10px;
-    right: 1em;
-    color: white;
 }
 
 a.whitelink:link {
@@ -194,7 +295,7 @@ a.disabledmenulink {
     position: absolute;
     background-color: white;
     color: black;
-	border: thin solid black;
+    border: thin solid black;
     padding: 10px;
     margin-left: 0px;
     margin-top: 0px;
@@ -206,7 +307,7 @@ a.disabledmenulink {
     position: absolute;
     background-color: white;
     color: black;
-	border: thin solid black;
+    border: thin solid black;
     padding: 10px;
     margin-left: -200px;
     margin-top: 0px;
@@ -215,53 +316,53 @@ a.disabledmenulink {
 }
 
 .popup::after {
-	position: absolute;
-	content: url("/image/close.png");
-	right: -10px;
-	top: -10px;
-	width: 32px;
-	height: 32px;
+    position: absolute;
+    content: url("/image/close.png");
+    right: -10px;
+    top: -10px;
+    width: 32px;
+    height: 32px;
 }
 
 .overlay {
-	 position: absolute;
-	 left: 0px;
-	 top: 0px;
-	 width:100%;
-	 height:100%;
-	 text-align:center;
-	 background: rgb(105, 105, 105);
-	 opacity: 0.3;
-	 z-index: 1000;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width:100%;
+    height:100%;
+    text-align:center;
+    background: rgb(105, 105, 105);
+    opacity: 0.3;
+    z-index: 1000;
 }
 
 .modal {
-	position: absolute;
-	width: 33%;
-	margin-top: 20%;
-	margin-left: 33%;
-	margin-right: auto;
-	background-color: white;
-	color: black;
-	border: thin solid black;
-	padding: 10px;
-	border-radius: 5px;
-	z-index: 1001;
-	opacity: 1;
+    position: absolute;
+    width: 33%;
+    margin-top: 20%;
+    margin-left: 33%;
+    margin-right: auto;
+    background-color: white;
+    color: black;
+    border: thin solid black;
+    padding: 10px;
+    border-radius: 5px;
+    z-index: 1001;
+    opacity: 1;
 }
 
 .modal::aftera {
-	position: absolute;
-	content: url("/image/error.png");
-	right: -10px;
-	top: -10px;
+    position: absolute;
+    content: url("/image/error.png");
+    right: -10px;
+    top: -10px;
 }
 
 .login {
     position: absolute;
     background-color: white;
     color: black;
-	border: thin solid black;
+    border: thin solid black;
     padding: 10px;
     margin-left: -100px;
     margin-top: 15px;
