--- a/src/template/grit/usermgmt/usersignup/startup.html
+++ b/src/template/grit/usermgmt/usersignup/startup.html
@@ -14,7 +14,8 @@
       <st:field id="userid" type="text" property="userid" label="Email" required="true"/>
       <st:field id="password" type="password" property="password" label="Password" required="true" confirm="true"/>
       <st:footer>
-          <st:action mode="new" label="Sign up" action="save"/>
+        <st:action mode="new" label="Sign up" action="save"/>
+        <st:action mode="new" label="Cancel" action="link" href="/"/>
       </st:footer>
     </st:form>
     {% endif %}
