--- a/src/template/grizzle/user/list.html
+++ b/src/template/grizzle/user/list.html
@@ -7,9 +7,7 @@
 {% block tabs %}
 
 <st:tab code="users" label="Users">
-    <st:table name="users" url="/json/user" keyname="email" valuename="display_name">
-    	<st:value text="Jan de Visser" key="jan@de-visser.net"/>
-    	<st:value text="Tim de Visser" key="tim@de-visser.net"/>
+    <st:table name="users" url="/json/user">
         <st:header>
             <st:action label="New" action="new"/>
         </st:header>
