cp - work in holland

--- a/src/template/base.html
+++ b/src/template/base.html
@@ -108,6 +108,7 @@
                                 </st:form>
                                 <st:form name="signup" url="/um/signup" modal="true" onsubmitted="signup_submitted">
                                     <st:field id="userid" type="text" property="userid" label="Email" required="true"/>
+                                    <st:field id="display_name" type="text" property="display_name" label="Name" required="true"/>
                                     <st:field id="password" type="password" property="password" label="Password" required="true" confirm="true"/>
                                     <st:footer>
                                         <st:action mode="new" label="Sign up" action="save"/>
