--- a/src/template/grizzle/user/list.html
+++ b/src/template/grizzle/user/list.html
@@ -6,15 +6,29 @@
 
 {% block tabs %}
 
+<script>
+    function refresh_table() {
+        $("users").render();
+    }
+</script>
+
 <st:tab code="users" label="Users">
     <st:table name="users" url="/json/user">
+        <st:sort name="display_name"/>
         <st:header>
             <st:action label="New" action="new"/>
         </st:header>
+        <st:column label="Status" type="icon" property="status" width="10%">
+            <!-- 'Unconfirmed', 'Active', 'Admin', 'Banned', 'Inactive', 'Deleted' -->
+            <st:icon value="Unconfirmed" icon="questionmark"/>
+            <st:icon value="Active" icon="checkmark"/>
+            <st:icon value="Banned" icon="forbidden"/>
+            <st:icon value="Deleted" icon="close"/>
+        </st:column>
         <st:column label="Email" type="link" property="email" url="/users/$key" width="25%"/>
-        <st:column label="Name" type="link" property="display_name" url="/users/$key" width="75%"/>
-        <st:dataform url="/um/create">
-            <st:field property="email" type="text" label="Email"/>
+        <st:column label="Name" type="link" property="display_name" url="/users/$key" width="65%"/>
+        <st:dataform url="/um/create" onsubmitted="refresh_table">
+            <st:field property="userid" type="text" label="Email"/>
             <st:field property="display_name" type="text" label="Name"/>
             <st:action mode="new;edit" label="Save" action="save"/>
             <st:action mode="view;new;edit" label="Cancel" action="cancel"/>
