--- a/src/css/grizzle.css
+++ b/src/css/grizzle.css
@@ -317,11 +317,11 @@ a.disabledmenulink {
 
 .popup::after {
     position: absolute;
-    content: url("/image/close.png");
+    content: url("/image/close16x16.png");
     right: -10px;
     top: -10px;
-    width: 32px;
-    height: 32px;
+    width: 16px;
+    height: 16px;
 }
 
 .overlay {
