Starting with sweattrails profiles
--HG--
rename : src/conf/grizzle.comp => src/conf/sweattrails.comp
rename : src/template/grit/usermgmt/usersignup/confirmed.html => src/template/grit/usermgmt/usercreate/confirmed.html
rename : src/template/grizzle/user/view.html => src/template/sweattrails/profile/view.html

--- a/src/template/base.html
+++ b/src/template/base.html
@@ -68,7 +68,7 @@
                                     <ul>
                                         <li>
                                             <a class="navitem" onclick="st_show_form('changepwd')" href="#">Change Password</a></li>
-                                        <li><a class="navitem" href="/">Profile</a></li>
+                                        <li><a class="navitem" href="/profile">Profile</a></li>
                                         <li><a class="navitem" href="/">Settings</a></li>
                                         <li>
                                             <a class="navitem" href="{{urls['user']['logout'].url()|e}}">
